# stm32-rs-devcontainer-nucleo-f446re

./: Cargo.toml  openocd.cfg
.cargo/: config.toml
.devcontainer/: devcontainer.json  init.sh
src/: main.rs
