[package]
authors = ["yukimakura <yukimakura86@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "nucleo-f411ce"
version = "0.1.0"

[dependencies]
embedded-hal = "0.2"
nb = "1"
cortex-m = { version = "0.7",features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2"
usb-device = "0.3.2"
usbd-serial = "0.2.2"

[dependencies.stm32f4xx-hal]
version = "0.22.1"
features = ["stm32f411", "rtic1", "otg-fs", "usb_fs"] 

# this lets you use `cargo fix`!
[[bin]]
name = "nucleo-f411ce"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
